apps/base/wordpress/mariadb-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-db-service
  namespace: default
spec:
  ports:
  - port: 3306
  selector:
    app: mariadb-wordpress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-wordpress
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb-wordpress
  template:
    metadata:
      labels:
        app: mariadb-wordpress
    spec:
      nodeSelector:
        kubernetes.io/hostname: quinn-hpprobook430g6
      containers:
      - name: mariadb
        image: mariadb:10.11
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: storage
          mountPath: /var/lib/mysql
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: wordpress-db-pvc
